--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,9 +1,8 @@
 workflows:
+  environment:
+    java: 17
   build:
     scripts:
-      - name: Set Java 17 for Gradle Daemon
-        script: echo "org.gradle.java.home=/Library/Java/JavaVirtualMachines/<path-to-your-java-17>/Contents/Home" > gradle.properties
-
       - name: Set execute permissions for gradlew
         script: chmod +x gradlew
 
